--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -1,9 +1,9 @@
 nav.brown.darken-4(role='navigation')
 	.nav-wrapper.container
-		a.brand-logo(href='#') Logo
+		a.brand-logo(href='/') Logo
 		ul#nav-mobile.right.hide-on-med-and-down
 			li
-				a(href='autopark') Автопарк
+				a(href='/') Автопарк
 			li
 				a(href='booking') Бронирование
 			li
