--- a/testdata/materialize/css/style.css
+++ b/testdata/materialize/css/style.css
@@ -165,9 +165,23 @@ nav {
 .car-image {
     width: 100%;
 }
+#cars-list {
+    min-width: 600px;
+}
 
 #cars-list .prices div {
     float: right;
+}
+
+.additional li {
+    position: relative;
+    border-bottom: 1px dotted grey;
+}
+
+.additional .price {
+    position: absolute;
+    top: 10px;
+    right: 0;
 }
 
 .confirm {
