--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -16,10 +16,10 @@
                         class="material-icons">menu</i></a>
                     <ul class="hide-on-med-and-down">
                         <li><a href="aboutus">Компания</a></li>
-                        <li><a href="autopark">Парк авто</a></li>
+                        <li><a href="carpark">Парк авто</a></li>
                         <li><a href="conditions">Условия проката</a></li>
-                        <li><a href="promos">Акции</a></li>
-                        <li><a href="cars_list">Контакты</a></li>
+                        <li><a href="promotions">Акции</a></li>
+                        <li><a href="contacts">Контакты</a></li>
                     </ul>
                 </div>
             </nav>
