--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,21 +14,21 @@
 </div>
 <div class="container" id="cars-list">
   <div class="row">
-    <div class="col s12 m6 l6"><img class="circle car-image" src="../images/corolla.jpg" alt=""/></div>
+    <div class="col s12 m6 l6"><img class="circle car-image" src="../assets/img/corolla.jpg" alt=""/></div>
     <div class="col s12 m6 l6">
       <div class="title">Volkswagen Polo Sedan</div>
       <div class="classification">Эконом класс</div>
       <ul class="car-char">
-        <li><img src="../images/gearshift.png"/><span>Автомат</span></li>
-        <li><img src="../images/sedan.png"/><span>Седан</span></li>
-        <li><img src="../images/engine.png"/><span> 1,4 л (94 л.с.)</span></li>
-        <li><img src="../images/seat.png"/><span>5 мест</span></li>
+        <li><img src="../assets/img/gearshift.png"/><span>Автомат</span></li>
+        <li><img src="../assets/img/sedan.png"/><span>Седан</span></li>
+        <li><img src="../assets/img/engine.png"/><span> 1,4 л (94 л.с.)</span></li>
+        <li><img src="../assets/img/seat.png"/><span>5 мест</span></li>
       </ul>
       <ul class="car-char">
-        <li><img src="../images/chassis.png"/><span>Передний</span></li>
-        <li><img src="../images/oil.png"/><span>Бензин/ГАЗ</span></li>
-        <li><img src="../images/conditioner.png"/><span> Кондиционер</span></li>
-        <li><img src="../images/distance.png"/><span>7.3 л/100 км.</span></li>
+        <li><img src="../assets/img/chassis.png"/><span>Передний</span></li>
+        <li><img src="../assets/img/oil.png"/><span>Бензин/ГАЗ</span></li>
+        <li><img src="../assets/img/conditioner.png"/><span> Кондиционер</span></li>
+        <li><img src="../assets/img/distance.png"/><span>7.3 л/100 км.</span></li>
       </ul>
       <ul class="collection prices">
         <li class="collection-item" data-price="20">
