--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="col s12">
             <div class="info-block">
-                <div class="logo"><a class="brand-logo" href="#!"></a></div>
+                <div class="logo"><a class="brand-logo" href="#!" style="background: url('../assets/img/new-logo.svg') no-repeat"></a></div>
                 <ul class="collection">
                     <li class="collection-item valign-wrapper">My order</li>
                     <li class="collection-item valign-wrapper">USD</li>
