--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<!--    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection">-->
-<!--    <link type="text/css" rel="stylesheet" href="css/style.css" media="screen,projection">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="assets/css/app.css" media="screen,projection">
+    <link rel="icon" href="assets//img/icons/favicon.png" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +14,6 @@
 {{> header }}
 {{{body}}}
 {{> footer }}
-<!-- JavaScript at end of body for optimized loading-->
-<!--<script type="text/javascript" src="js/materialize.min.js"></script>-->
-<!--<script src="js/custom.js"></script>-->
 <script src="assets/js/app.js"></script>
 </body>
 </html>
