--- a/views/index.hbs
+++ b/views/index.hbs
@@ -126,7 +126,7 @@
               <ul>
                 <li class="calc">
                   <label>
-                    <input type="checkbox"/><span>GPS навигатор</span><span class="price right-align">1</span>
+                    <input type="checkbox" class="checkbox-orange"/><span>GPS навигатор</span><span class="price right-align">1</span>
                   </label>
                 </li>
                 <li class="calc">
